--- a/.github/workflows/ssg-build.yml
+++ b/.github/workflows/ssg-build.yml
@@ -37,4 +37,4 @@ jobs:
           git config --global user.name "BrunoLM"
           git config --global user.email "brunolm7@gmail.com"
           git commit -m ":rocket: New SSG Build"
-          git subtree push --prefix ssg origin master
+          git subtree push -f --prefix ssg origin master
