--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "npx nullstack start",
-    "build": "npx nullstack build"
+    "build": "npx nullstack build --mode=ssg"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
