--- a/.github/workflows/ssg-build.yml
+++ b/.github/workflows/ssg-build.yml
@@ -28,7 +28,7 @@ jobs:
           NULLSTACK_PROJECT_NAME: 'BrunoLM'
           NULLSTACK_PROJECT_DOMAIN: 'brunolm.com'
           NULLSTACK_PROJECT_COLOR: '#D22365'
-        run: yarn build --cache
+        run: yarn build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
